O3-4210: Fix button alignment to bottom-right and update button order

--- a/src/components/action-buttons.scss
+++ b/src/components/action-buttons.scss
@@ -1,9 +1,15 @@
 .actionBtns {
-  float: right;
-  margin-left: 1rem;
-  margin-top: 2rem;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  gap: 0;
 }
 
 .extensionSlot {
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  height: 100%;
+  position: relative;
 }
